# legit

./: Cargo.toml  package-lock.json  package.json
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.vue  main.ts
app/src/components/: FileTree.vue  FileTreeNode.vue
app/src/stores/: fileTree.ts
crates/cli/: cargo.toml
crates/cli/src/: main.rs
crates/legit/: cargo.toml
crates/legit/src/: commits.rs  lib.rs  objects.rs  repository.rs
crates/legit/src/config/: default.ini
crates/tauri/: Cargo.toml  tauri.conf.json
crates/tauri/src/: lib.rs
src/: lib.rs  main.rs  objects.rs  repository.rs  settings.rs
