[package]
name = "legit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
config = { version = "0.15.11", features = ["ini"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.19.1"
